fix alignment

--- a/@navikt/core/css/alert.css
+++ b/@navikt/core/css/alert.css
@@ -4,7 +4,6 @@
   padding: var(--a-spacing-4);
   display: flex;
   gap: var(--a-spacing-3);
-  align-items: center;
 }
 
 .navds-alert__wrapper--maxwidth {
